[package]
name = "auth_server"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.7.0"
chrono = "0.4.19"
seahash = "4.1.0"
futures = { version = "0.3.21", default-features = false }
tokio = "1.17.0"
serde_json = "1.0.79"
serde = { version = "1.0.133", features = ["derive"] }